--- a/AuthService/src/AuthService.Server/Views/_ViewImports.cshtml
+++ b/AuthService/src/AuthService.Server/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using AuthService
-@using AuthService.Models
+@using AuthService.Server.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
