feat: setting up proper scopes and extracting hardcoded variables into env

--- a/AuthService/src/AuthService.Server/Views/Authentication/Login.cshtml
+++ b/AuthService/src/AuthService.Server/Views/Authentication/Login.cshtml
@@ -14,7 +14,7 @@
 <body>
     <div class="page-wrapper">
         <div class="login-card">
-            <h1>OpenID</h1>
+            <h1>Welcome</h1>
             <form action="/auth/GoogleLogin" method="post">
                 <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
                 <button class="google-btn" type="submit">
